--- a/style.css
+++ b/style.css
@@ -131,6 +131,96 @@
   margin: 0 auto;
 }
 
+.settings-flyout{
+  position: fixed;
+  height: 100vh;
+  background-color: white;
+  width: 500px;
+  z-index: 10;
+  right: 0;
+  bottom: 0vh;
+  border-left: gray solid 3px;
+  transition: all 0.5s;
+}
+
+.settings-flyout__not-visible{
+  right: -500px;
+  transition: all 0.5s;
+}
+
+.settings-heading{
+  margin-top: 2em;
+  font-weight: 600;
+  font-size: 22px;
+  
+}
+
+.flyout-container{
+  padding: 2em 4em 2em 2em;
+}
+
+.flyout-container > p{
+  line-height: 1.25em;
+  width: 90%;
+}
+
+.flyout-container > h2{
+  margin: 2em 0 1em 0;
+  font-weight: 600;
+}
+
+.settings-toggle-container{
+  font-weight: 600;
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+
+/** Settings Toggle Switch START
+ -------------------------------------*/
+
+.switch input {
+  position: absolute;
+  opacity: 0;
+}
+
+.switch {
+  display: inline-block;
+  font-size: 20px; /* 1 */
+  height: 1.25em;
+  width: 2.25em;
+  background: white;
+  border-radius: 1em;
+  border: solid #BFBFBF 1.5px;
+  position: relative;
+  bottom: 1px;
+}
+
+.switch div {
+  height: 18px;
+  position: relative;
+  top: 2px;
+  width: 1em;
+  border-radius: 1em;
+  background: #BFBFBF;
+  box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+          transition: all 300ms;
+}
+
+.switch input:checked + div {
+  -webkit-transform: translate3d(100%, 0, 0);
+     -moz-transform: translate3d(100%, 0, 0);
+          transform: translate3d(100%, 0, 0);
+          background: #007BFF;
+}
+
+
+
+/** Settings Toggle Switch END
+ -------------------------------------*/
+
 .cluster-name{
   font-size: 18px;
   color: var(--blue-violet2);
