--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@
   padding-left: 1em;
 }
 
+.map-labels-container.map-labels-container__help-box{
+  padding: 1em 0 0 0;
+}
+
 .map-labels-heading{
   font-size: 18px;
   font-weight: 600;
